--- a/x.ideas/__mycloud/my-devops/1.proper-app.md
+++ b/x.ideas/__mycloud/my-devops/1.proper-app.md
@@ -1,4 +1,4 @@
-* no filesystem write, only db or s3
+* no filesystem write, only db or s3 (for cache file identify dirs to have emptyDir mounted later)
 * logs to stdout
 * no need for initializing command after process start
 * all endpoints are env/config based not hardocded
