--- a/x.ideas/__mycloud/my-devops/2.proper-dockerfile.md
+++ b/x.ideas/__mycloud/my-devops/2.proper-dockerfile.md
@@ -1,7 +1,7 @@
 * no code/file mount from outside, can run anywhere simply with docker run
 * no supervised process, only a single process in each container
-* no port binding < 1024 + to be fixed
-* no root user process + to be fixed
+* no port binding < 1024 + TODO: to be fixed
+* no root user process + TODO: to be fixed
 
 
 
