--- a/x.ideas/__mycloud/my-devops/5.bootstrap.md
+++ b/x.ideas/__mycloud/my-devops/5.bootstrap.md
@@ -1,7 +1,7 @@
-* create namespaces and joins them to team
-* add argocd rbacs
-* add gitlab repos to argocd
-* bootstrap app of apps chart + argocd app create
+* create namespaces and joins them to team. TODO: self-service
+* add argocd rbacs: use ArgoCDUser object (manual, no argo in argo)
+* add gitlab repos to argocd (manual one time)
+* bootstrap app of apps chart + argocd app create. TODO: for users
 * a common helm chart for:
     - rbac for ci jobs
     - rbac roles for users
