--- a/x.ideas/__mycloud/my-devops/0.login.md
+++ b/x.ideas/__mycloud/my-devops/0.login.md
@@ -1,6 +1,6 @@
-landing page
-status page
-documentation
+landing page https://snappcloud.io
+status page https://status.snappcloud.io
+documentation https://docs.snappcloud.io
 support
 ---
 login (multi-region?)
